# financial-ledger-system

./: .gitignore  CMakeLists.txt  README.md
codefornada/: .gitignore  Makefile  README.md  package-lock.json  package.json  tsconfig.json
codefornada/native/: math.c
codefornada/src/: server.ts
codefornada/src/views/: index.ejs
include/auth/: user_info.h
include/core/: registration.h  tui_palette.h
include/models/: classes.h
include/validation/: validation.h
src/auth/: user_info.cpp
src/core/: globals.cpp  login.cpp  main.cpp  menu_handler.cpp  registration.cpp
src/validation/: validation.cpp
